@@ -4,8 +4,9 @@ apt (0.8.16~exp14) experimental; urgency=low
   * apt-pkg/packagemanager.cc:
     - recheck all dependencies if we changed a package in SmartConfigure
       as this could break an earlier dependency (LP: #940396)
+    - recheck dependencies in SmartUnpack after a change, too
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 13 Mar 2012 11:33:46 +0100
+ -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 13 Mar 2012 12:38:35 +0100
 
 apt (0.8.16~exp13) experimental; urgency=low
 
